force-app/main/default/objects/VCG_CPQ_Provision_Template__c/VCG_CPQ_Provision_Template__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>VCG_CPQ_Provision_Template</label>
</CustomObject>