force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/APPLICATION_DISCOUNTS__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION_DISCOUNTS__c</fullName>
    <label>APPLICATION_DISCOUNTS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>