force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/APPLICATIONS__c.field-meta.xml
<CustomField>
    <fullName>APPLICATIONS__c</fullName>
    <label>APPLICATIONS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>