force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/CONTINGENCY_DETAILS__c.field-meta.xml
<CustomField>
    <fullName>CONTINGENCY_DETAILS__c</fullName>
    <label>CONTINGENCY_DETAILS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>