force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/CONTINGENCY_PROVISION__c.field-meta.xml
<CustomField>
    <fullName>CONTINGENCY_PROVISION__c</fullName>
    <label>CONTINGENCY_PROVISION</label>
    <length>128</length>
    <type>Text</type>
</CustomField>