force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/CONTRACT__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT__c</fullName>
    <label>CONTRACT</label>
    <length>128</length>
    <type>Text</type>
</CustomField>