force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/CONTRACT_GRADE__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_GRADE__c</fullName>
    <label>CONTRACT_GRADE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>