force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/CUSTOMER_INDEMNIFICATION__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_INDEMNIFICATION__c</fullName>
    <label>CUSTOMER_INDEMNIFICATION</label>
    <length>128</length>
    <type>Text</type>
</CustomField>