force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/DATA_POLICY__c.field-meta.xml
<CustomField>
    <fullName>DATA_POLICY__c</fullName>
    <label>DATA_POLICY</label>
    <length>128</length>
    <type>Text</type>
</CustomField>