force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/EXT_TERMINAL_MAINTENANCE_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>EXT_TERMINAL_MAINTENANCE_DISCOUNT__c</fullName>
    <label>EXT_TERMINAL_MAINTENANCE_DISCOUNT</label>
    <length>128</length>
    <type>Text</type>
</CustomField>