force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/EXTENDED_TERMINAL_MAINTENANCE__c.field-meta.xml
<CustomField>
    <fullName>EXTENDED_TERMINAL_MAINTENANCE__c</fullName>
    <label>EXTENDED_TERMINAL_MAINTENANCE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>