force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/FREE_DRIVER_DISPATCHER_TRAINING__c.field-meta.xml
<CustomField>
    <fullName>FREE_DRIVER_DISPATCHER_TRAINING__c</fullName>
    <label>FREE_DRIVER_DISPATCHER_TRAINING</label>
    <length>128</length>
    <type>Text</type>
</CustomField>