force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/FREE_INSTALLATION_DETAILS__c.field-meta.xml
<CustomField>
    <fullName>FREE_INSTALLATION_DETAILS__c</fullName>
    <label>FREE_INSTALLATION_DETAILS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>