force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/FREE_SERVICE_MESSAGING__c.field-meta.xml
<CustomField>
    <fullName>FREE_SERVICE_MESSAGING__c</fullName>
    <label>FREE_SERVICE_MESSAGING</label>
    <length>128</length>
    <type>Text</type>
</CustomField>