force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/FREE_TECHNICAL_SERVICES__c.field-meta.xml
<CustomField>
    <fullName>FREE_TECHNICAL_SERVICES__c</fullName>
    <label>FREE_TECHNICAL_SERVICES</label>
    <length>128</length>
    <type>Text</type>
</CustomField>