force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/FUTURE_PRODUCTS_OBSOLESCENCE_CLAUSE__c.field-meta.xml
<CustomField>
    <fullName>FUTURE_PRODUCTS_OBSOLESCENCE_CLAUSE__c</fullName>
    <label>FUTURE_PRODUCTS_OBSOLESCENCE_CLAUSE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>