force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/GOVERNING_LAW_VENUE__c.field-meta.xml
<CustomField>
    <fullName>GOVERNING_LAW_VENUE__c</fullName>
    <label>GOVERNING_LAW_VENUE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>