force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/HARDWARE_MFN__c.field-meta.xml
<CustomField>
    <fullName>HARDWARE_MFN__c</fullName>
    <label>HARDWARE_MFN</label>
    <length>128</length>
    <type>Text</type>
</CustomField>