force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/HARDWARE_PLATFORM__c.field-meta.xml
<CustomField>
    <fullName>HARDWARE_PLATFORM__c</fullName>
    <label>HARDWARE_PLATFORM</label>
    <length>128</length>
    <type>Text</type>
</CustomField>