force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/IN_SERVICE_NRF__c.field-meta.xml
<CustomField>
    <fullName>IN_SERVICE_NRF__c</fullName>
    <label>IN_SERVICE_NRF</label>
    <length>128</length>
    <type>Text</type>
</CustomField>