force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/MASTER_CONTRACT_VERSION__c.field-meta.xml
<CustomField>
    <fullName>MASTER_CONTRACT_VERSION__c</fullName>
    <label>MASTER_CONTRACT_VERSION</label>
    <length>128</length>
    <type>Text</type>
</CustomField>