force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/MOUNTS_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>MOUNTS_DISCOUNT__c</fullName>
    <label>MOUNTS_DISCOUNT</label>
    <length>128</length>
    <type>Text</type>
</CustomField>