force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/NON_STANDARD_CUST_INDEMNIFICATION_DETAIL__c.field-meta.xml
<CustomField>
    <fullName>NON_STANDARD_CUST_INDEMNIFICATION_DETAIL__c</fullName>
    <label>NON_STANDARD_CUST_INDEMNIFICATION_DETAIL</label>
    <length>128</length>
    <type>Text</type>
</CustomField>