force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/NON_STANDARD_CUST_LIMITATION_OF_LIABILI__c.field-meta.xml
<CustomField>
    <fullName>NON_STANDARD_CUST_LIMITATION_OF_LIABILI__c</fullName>
    <label>NON_STANDARD_CUST_LIMITATION_OF_LIABILI</label>
    <length>128</length>
    <type>Text</type>
</CustomField>