force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/NON_STANDARD_INVOICING_PMT_OR_TAX_TERM__c.field-meta.xml
<CustomField>
    <fullName>NON_STANDARD_INVOICING_PMT_OR_TAX_TERM__c</fullName>
    <label>NON_STANDARD_INVOICING_PMT_OR_TAX_TERM</label>
    <length>128</length>
    <type>Text</type>
</CustomField>