force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/NON_STANDARD_OMNI_LIMITATION_OF_LIABILIT__c.field-meta.xml
<CustomField>
    <fullName>NON_STANDARD_OMNI_LIMITATION_OF_LIABILIT__c</fullName>
    <label>NON_STANDARD_OMNI_LIMITATION_OF_LIABILIT</label>
    <length>128</length>
    <type>Text</type>
</CustomField>