force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/NON_STANDARD_PAYMENT_TERMS_DETAILS__c.field-meta.xml
<CustomField>
    <fullName>NON_STANDARD_PAYMENT_TERMS_DETAILS__c</fullName>
    <label>NON_STANDARD_PAYMENT_TERMS_DETAILS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>