force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/NON_STANDARD_TERMINATION_FEES_OR_TERMS__c.field-meta.xml
<CustomField>
    <fullName>NON_STANDARD_TERMINATION_FEES_OR_TERMS__c</fullName>
    <label>NON_STANDARD_TERMINATION_FEES_OR_TERMS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>