force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/OMNI_ASSIGNABILITY_RIGHTS__c.field-meta.xml
<CustomField>
    <fullName>OMNI_ASSIGNABILITY_RIGHTS__c</fullName>
    <label>OMNI_ASSIGNABILITY_RIGHTS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>