force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/OMNI_INDEMNIFICATION__c.field-meta.xml
<CustomField>
    <fullName>OMNI_INDEMNIFICATION__c</fullName>
    <label>OMNI_INDEMNIFICATION</label>
    <length>128</length>
    <type>Text</type>
</CustomField>