force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/OMNI_LIMITATION_OF_LIABILITY__c.field-meta.xml
<CustomField>
    <fullName>OMNI_LIMITATION_OF_LIABILITY__c</fullName>
    <label>OMNI_LIMITATION_OF_LIABILITY</label>
    <length>128</length>
    <type>Text</type>
</CustomField>