force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/OTHER_HARDWARE_DISCOUNTS__c.field-meta.xml
<CustomField>
    <fullName>OTHER_HARDWARE_DISCOUNTS__c</fullName>
    <label>OTHER_HARDWARE_DISCOUNTS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>