force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/OTHER_NON_STANDARD_TERMS__c.field-meta.xml
<CustomField>
    <fullName>OTHER_NON_STANDARD_TERMS__c</fullName>
    <label>OTHER_NON_STANDARD_TERMS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>