force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/OTHER_SHIPMENT_TERMS_DETAILS__c.field-meta.xml
<CustomField>
    <fullName>OTHER_SHIPMENT_TERMS_DETAILS__c</fullName>
    <label>OTHER_SHIPMENT_TERMS_DETAILS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>