force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/PAYMENT_TERMS_QES__c.field-meta.xml
<CustomField>
    <fullName>PAYMENT_TERMS_QES__c</fullName>
    <label>PAYMENT_TERMS_QES</label>
    <length>128</length>
    <type>Text</type>
</CustomField>