force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/PRICE_INCREASE_CAP__c.field-meta.xml
<CustomField>
    <fullName>PRICE_INCREASE_CAP__c</fullName>
    <label>PRICE_INCREASE_CAP</label>
    <length>128</length>
    <type>Text</type>
</CustomField>