force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/PRICE_INCREASES_Y_N__c.field-meta.xml
<CustomField>
    <fullName>PRICE_INCREASES_Y_N__c</fullName>
    <label>PRICE_INCREASES_Y_N</label>
    <length>128</length>
    <type>Text</type>
</CustomField>