force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/RETENTION_TOOLKIT_TERMS__c.field-meta.xml
<CustomField>
    <fullName>RETENTION_TOOLKIT_TERMS__c</fullName>
    <label>RETENTION_TOOLKIT_TERMS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>