force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/SERVICE_DATA_PLAN_DISCOUNTS_NOTES__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_DATA_PLAN_DISCOUNTS_NOTES__c</fullName>
    <label>SERVICE_DATA_PLAN_DISCOUNTS_NOTES</label>
    <length>128</length>
    <type>Text</type>
</CustomField>