force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/SERVICE_MFN__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_MFN__c</fullName>
    <label>SERVICE_MFN</label>
    <length>128</length>
    <type>Text</type>
</CustomField>