force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/SERVICE_PLAN__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_PLAN__c</fullName>
    <label>SERVICE_PLAN</label>
    <length>128</length>
    <type>Text</type>
</CustomField>