force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/SHIPMENT_TERMS__c.field-meta.xml
<CustomField>
    <fullName>SHIPMENT_TERMS__c</fullName>
    <label>SHIPMENT_TERMS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>