force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/SOFTWARE__c.field-meta.xml
<CustomField>
    <fullName>SOFTWARE__c</fullName>
    <label>SOFTWARE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>