force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/SOFTWARE_DISCOUNTS__c.field-meta.xml
<CustomField>
    <fullName>SOFTWARE_DISCOUNTS__c</fullName>
    <label>SOFTWARE_DISCOUNTS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>