force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/SOFTWARE_MFN__c.field-meta.xml
<CustomField>
    <fullName>SOFTWARE_MFN__c</fullName>
    <label>SOFTWARE_MFN</label>
    <length>128</length>
    <type>Text</type>
</CustomField>