force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/TELECOM_LINK__c.field-meta.xml
<CustomField>
    <fullName>TELECOM_LINK__c</fullName>
    <label>TELECOM_LINK</label>
    <length>128</length>
    <type>Text</type>
</CustomField>