force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/TERMINAL_COMMITMENT_DELIVERY_TIMEFRAME__c.field-meta.xml
<CustomField>
    <fullName>TERMINAL_COMMITMENT_DELIVERY_TIMEFRAME__c</fullName>
    <label>TERMINAL_COMMITMENT_DELIVERY_TIMEFRAME</label>
    <length>128</length>
    <type>Text</type>
</CustomField>