force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/TERMINAL_CREDITS__c.field-meta.xml
<CustomField>
    <fullName>TERMINAL_CREDITS__c</fullName>
    <label>TERMINAL_CREDITS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>