force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/TERMINAL_LIST_PRICE_DISCOUNT_DETAILS__c.field-meta.xml
<CustomField>
    <fullName>TERMINAL_LIST_PRICE_DISCOUNT_DETAILS__c</fullName>
    <label>TERMINAL_LIST_PRICE_DISCOUNT_DETAILS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>