force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/TERRESTRIAL_DATA_PLAN__c.field-meta.xml
<CustomField>
    <fullName>TERRESTRIAL_DATA_PLAN__c</fullName>
    <label>TERRESTRIAL_DATA_PLAN</label>
    <length>128</length>
    <type>Text</type>
</CustomField>