force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/TRADE_IN_PROGRAM__c.field-meta.xml
<CustomField>
    <fullName>TRADE_IN_PROGRAM__c</fullName>
    <label>TRADE_IN_PROGRAM</label>
    <length>128</length>
    <type>Text</type>
</CustomField>