force-app/main/default/objects/VCG_CPQ_Provision_Template__c/fields/VERSION__c.field-meta.xml
<CustomField>
    <fullName>VERSION__c</fullName>
    <label>VERSION</label>
    <length>128</length>
    <type>Text</type>
</CustomField>